# removert

./: CMakeLists.txt  README.md  pose.txt  process.txt
src/: Removerter.cpp  Removerter.h  innolog.cpp  innolog.h  innolog_base.h  point_type.h  removert_main.cpp
